--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,6 @@
 cmake_minimum_required (VERSION 3.6)
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 SET(EXE_NAME "WFCTiles")
 
@@ -8,8 +10,6 @@ file(GLOB_RECURSE SRC
     src/*.h
     src/*.cpp
 )
-
-
 
 ADD_EXECUTABLE(${EXE_NAME} ${SRC})
 
